--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,9 @@
 ################################################################################
 
 /Cursos/Ciencia e Engenharia Fisica/Oil e Gas/Semana 1/Oil and Gas Sources
+/Cursos/Ciencia e Engenharia Fisica/Oil e Gas
+/ModeloCurriculo
+/CurriculoMinimo.docx
+/Curriculo2.dotx
+/Curriculo1.dotx
+/README2.md
